made one change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Jeremiah Salley</h1>
         <ul id="nav">
             <li id="first-list">Virginia Beach, VA | </li>
-            <li id="first-list"><a href="https://github.com/">GitHub</a> | </li>
+            <li id="first-list"><a href="https://github.com/jeremiahsalley">GitHub</a> | </li>
             <li id="first-list">Jeremiah.salley25@gmail.com​</li>
         </ul>
         <div class="soft">
